2011-01-03  Werner Koch  <wk@g10code.com>

	* configure.ac [BUILD_REVISION]: Shorten git commit identifier.

2010-12-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Add a git commit identifier to the version.

2010-10-26  Werner Koch  <wk@g10code.com>

	Release 1.1.0.

	* configure.ac: Bump LT version to C18/A10/R0.
        * config.guess: Update to version 2010-09-24.
        * config.sub: Update to version 2010-09-11.

2010-08-19  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_TOP, AH_BOTTOM): New.  Define
	GPG_ERR_ENABLE_ERRNO_MACROS.

2010-07-15  Werner Koch  <wk@g10code.com>

	Release 1.0.8.

	* configure.ac: Bump LT version to C17/A9/R8.

2010-01-22  Werner Koch  <wk@g10code.com>

	* autogen.sh: Support --build-w32ce.

	* configure.ac: Require libgpg-error 1.8.
	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
	(AC_CHECK_FUNCS): Check for getenv.

	* ltmain.sh (wrappers_required): Don't set for mingw32ce.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	Update to libtool 2.2.6a.
	* configure.ac: Invoke AC_CONFIG_MACRO_DIR.
	(AC_LIBTOOL_WIN32_DLL, AC_LIBTOOL_RC): Replace by ...
	(LT_PREREQ, LT_INIT, LT_LANG): ... these.
	* config.guess, config.sub, install-sh, ltmain.sh, m4/libtool.m4:
	Updated to libtool 2.2.6a.
	* m4/ltoptions.m4, m4/ltsugar.m4, m4/ltversion.m4,
	m4/lt~obsolete.m4: New files from libtool 2.2.6a.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Allow cross compiling to be "maybe".

2009-07-03  Werner Koch  <wk@g10code.com>

	* configure.ac: Bump LT version to C17/A9/R7.  Unfortunately only
	after the release so to anticipate fixes by distributions.

2009-07-03  Werner Koch  <wk@g10code.com>

	Release 1.0.7.

2009-06-05  Werner Koch  <wk@g10code.com>

	Release 1.0.6.

	* configure.ac: Bump LT version to C17/A9/R6.

2009-01-09  Werner Koch  <wk@g10code.com>

	Release 1.0.5.

	* configure.ac: Bump LT version to C17/A9/R5.

2008-10-30  Werner Koch  <wk@g10code.com>
