@@ -1,3 +1,10 @@
+2011-02-25  Werner Koch  <wk@g10code.com>
+
+	* ksba-config.in: Add option --host.
+	* ksba.m4: Use --host for an consistency check.
+
+	* version.c (compare_versions): Do not compare the patchlevel.
+
 2010-09-13  Werner Koch  <wk@g10code.com>
 
 	* asn1-gentables.c (DEVNULL_NAME): New.
