@@ -1,3 +1,8 @@
+2011-02-25  Werner Koch  <wk@g10code.com>
+
+	* configure.ac (KSBA_CONFIG_HOST): New.
+	* m4/libgcrypt.m4, m4/gpg-error.m4: Update from their git masters.
+
 2011-01-03  Werner Koch  <wk@g10code.com>
 
 	* configure.ac [BUILD_REVISION]: Shorten git commit identifier.
